[package]
name = "ss5_piston"
version = "0.1.0"
authors = ["3c1u (Hikaru Terazono) <298748+3c1u@users.noreply.github.com>"]
edition = "2018"

[[example]]
name = "animate"

[dependencies]
piston = "0.49.0"
piston2d-graphics = "0.32.0"
serde_json = "1.0.40"
serde = { version = "1.0.94", features = ["derive"] }
piston-gfx_texture = "0.36.0"
gfx_core = "0.8.3"

[dev-dependencies]
piston_window = "0.100.0"
pistoncore-sdl2_window = "0.63.0"
